--- a/src/app/form-persistence/test/form-persistence-test/form-persistence-test.component.html
+++ b/src/app/form-persistence/test/form-persistence-test/form-persistence-test.component.html
@@ -1,17 +1,17 @@
-<div class="form" [formGroup]="form">
+<form class="form" [formGroup]="form" appFormPersistence name="newform">
     <div class="title">User Form</div>
     <div class="form-group">
         <label>Name</label>
-        <input type="text" formControlName="name">
+        <input type="text" class="form-control" formControlName="name">
     </div>
 
     <div class="form-group">
         <label>Password</label>
-        <input type="password" formControlName="name">
+        <input class="form-control" type="password" formControlName="password">
     </div>
 
     <div class="form-group">
-        <button type="submit">Submit</button>
+        <button class="form-control">Submit</button>
     </div>
 
-</div>
+</form>
