Height Calculate module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-match-media-test></app-match-media-test> -->
-<app-form-persistence-test></app-form-persistence-test>
+<!-- <app-form-persistence-test></app-form-persistence-test> -->
+<app-height-calculate-test></app-height-calculate-test>
