--- a/src/app/components/height-calculate-test/height-calculate-test.component.html
+++ b/src/app/components/height-calculate-test/height-calculate-test.component.html
@@ -1,7 +1,7 @@
 <div class="layout" #layout>
-    <nav #nav>Navbar</nav>
+    <nav #nav class="nav">Navbar</nav>
 
-    <div class="body" [style.height.px]="[layout,footer,nav] | heightCalculate:heightCalculate$ | async">
+    <div class="body" [style.height.px]="[layout, footer, nav ] | heightCalculateSync ">
         This is body and it needs to take full space upto footer.
         <p>Height will be calculated after 1 seconds in this case</p>
     </div>
