--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- <app-match-media-test></app-match-media-test> -->
+<app-match-media-test></app-match-media-test>
 <!-- <app-form-persistence-test></app-form-persistence-test> -->
-<app-height-calculate-test></app-height-calculate-test>
+<!-- <app-height-calculate-test></app-height-calculate-test> -->
 <!-- <app-broadcast-channel-test></app-broadcast-channel-test> -->
 <!-- <app-two-way-binding-test></app-two-way-binding-test> -->
