Heightcalculate name changed, Custom form control data changed to errorMessages and now can pass in camelCase

--- a/src/app/components/custom-form-control-test/custom-form-control-test.component.html
+++ b/src/app/components/custom-form-control-test/custom-form-control-test.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" class="form-group">
     <label for="">Name</label>
-    <app-custom-form-control [maxLength]="10" [data]="{required:'Name is asdf sad fsadf asfd asdf  required'}">
-        <input [maxLength]="10" class="form-control" formControlName="name">
-    </app-custom-form-control>
+    <c-form-control [errorMessages]="{required:'Name is  required',maxLength:'Maximum 10 characters is valid'}">
+        <input class="form-control" formControlName="name">
+    </c-form-control>
 </form>
