--- a/src/app/components/height-calculate-test/height-calculate-test.component.html
+++ b/src/app/components/height-calculate-test/height-calculate-test.component.html
@@ -1,7 +1,7 @@
 <div class="layout" #layout>
     <nav #nav class="nav">Navbar</nav>
 
-    <div class="body" [style.height.px]="[layout, footer, 'nav'] | heightCalculateSync">
+    <div class="body" [style.height.px]="[layout, footer, 'nav'] | heightCalculateAsync:this.heightCalculate$ | async">
         This is body and it needs to take full space upto footer.
         <p>Height will be calculated after 1 seconds in this case</p>
     </div>
