--- a/src/lib/form-control/components/custom-form-control/custom-form-control.component.html
+++ b/src/lib/form-control/components/custom-form-control/custom-form-control.component.html
@@ -1,14 +1,15 @@
 <ng-content></ng-content>
-<div class="error-container">
-    <ng-container *ngFor="let errorType of dataKeys">
-        <div class="error">
-            <ng-container *ngIf="(hasError$ | async) as hasError">
-                <ng-container *ngIf="hasError[errorType]">{{errorType | fromObject:data}}
-                </ng-container>
+<div class="c-additions">
+    <div class="c-error-container">
+        <ng-container *ngIf="(hasError$ | async) as hasError">
+            <ng-container *ngFor="let errorType of dataKeys">
+                <div class="c-error" *ngIf="hasError[errorType]">
+                    {{errorType | fromObject:data}}
+                </div>
             </ng-container>
-        </div>
-    </ng-container>
-    <div *ngIf="control && maxLength" class="counter">
+        </ng-container>
+    </div>
+    <div *ngIf="control && maxLength" class="c-counter">
         [{{control.value?.length || 0}} / {{maxLength}}]
     </div>
 </div>
