--- a/src/app/components/custom-form-control-test/custom-form-control-test.component.html
+++ b/src/app/components/custom-form-control-test/custom-form-control-test.component.html
@@ -1,6 +1,12 @@
 <form [formGroup]="form" class="form-group">
     <label for="">Name</label>
-    <c-form-control [errorMessages]="{required:'Name is  required',maxLength:'Maximum 10 characters is valid'}">
+    <c-form-control [errorMessages]="{
+       required: 'This is required',
+       email:'Email',
+       maxLength: 'Max length'
+   }" [priority]="true">
         <input class="form-control" formControlName="name">
+        <!-- <small *ngIf="form.get('name')?.hasError('required')">It is required</small>
+        <small *ngIf="form.get('name')?.hasError('email')">It is email</small> -->
     </c-form-control>
 </form>
