--- a/src/lib/form-control/components/custom-form-control/custom-form-control.component.scss
+++ b/src/lib/form-control/components/custom-form-control/custom-form-control.component.scss
@@ -5,7 +5,7 @@
   margin-top: 0.5rem;
   .c-error-container {
     .c-error {
-      color: red;
+      color: #dd1111;
       font-size: 0.8rem;
     }
   }
