custom form control error color and padding changed

--- a/src/lib/custom-form-control/custom-form-control.scss
+++ b/src/lib/custom-form-control/custom-form-control.scss
@@ -4,9 +4,9 @@
   justify-content: space-between;
   margin-top: 0.3rem;
   .c-error-container {
+    padding: 3px;
     .c-error {
-      color: #dd1111;
-      font-size: 0.8rem;
+      color: #ee3e3e;
     }
   }
   .c-counter {
