--- a/src/app/components/custom-form-control-test/custom-form-control-test.component.html
+++ b/src/app/components/custom-form-control-test/custom-form-control-test.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" class="form-group">
-    <c-form-control [data]="{maxLength:20,minLength:5}">
+    <c-form-control>
         <label cLabel for="">First Name</label>
-        <input class="form-control" formControlName="name">
+        <input class="form-control" formControlName="name" [maxlength]="20">
     </c-form-control>
 
     <c-form-control [data]="{minLength:10}">
