Media match pipe bases placed inside base folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- <app-height-calculate-test></app-height-calculate-test> -->
-<!-- <app-match-media-test></app-match-media-test> -->
+<app-match-media-test></app-match-media-test>
 <!-- <app-form-persistence-test></app-form-persistence-test> -->
 <!-- <app-broadcast-channel-test></app-broadcast-channel-test> -->
 <!-- <app-two-way-binding-test></app-two-way-binding-test> -->
-<app-custom-form-control-test></app-custom-form-control-test>
+<!-- <app-custom-form-control-test></app-custom-form-control-test> -->
