--- a/src/app/components/match-media-test/match-media-test.component.html
+++ b/src/app/components/match-media-test/match-media-test.component.html
@@ -1,29 +1,22 @@
 <div class="first">
-    <ng-container *mediaMatch="'xs'">
-        This is <b>XS</b> screen
+    <ng-container *mediaMatchOr="['sm','xs'];else large">
+        <ng-container *mediaMatch="'nonHoverable';else nonHov">
+            This is <b>mobile and Non Hoverable</b> screen
+        </ng-container>
     </ng-container>
 
-    <ng-container *mediaMatch="'sm'">
-        This is <b>SM</b> screen
-    </ng-container>
-
-    <ng-container *mediaMatch="'md'">
-        This is <b>MD</b> screen
-    </ng-container>
-
-    <ng-container *mediaMatch="'lg'">
-        this is <b>LG</b> screen
-    </ng-container>
-
-    <ng-container *mediaMatch="'xl'">
-        this is <b>XL</b> screen
-    </ng-container>
+    <ng-template #large>
+        This is Large screen
+    </ng-template>
+    <ng-template #nonHov>
+        This is hov screen
+    </ng-template>
 
 </div>
 <div class="text">
-    <div [class]="{xs:'is-xs',sm:'is-sm',md:'is-md'} | mediaMatchDefault:'is-large' | async">
+    <div [class]="{xs:'is-xs',sm:'is-sm',md:'is-md'} | mediaMatchDefault:'is-large'">
         Changes background as per media query => {{
-        {xs:'It is mobile device'} | mediaMatch:'It is not mobile device' | async
+        {xs:'It is mobile device'} | mediaMatchAsync:'It is not mobile device' | async
         }}
     </div>
 </div>
