--- a/src/app/components/custom-form-control-test/custom-form-control-test.component.html
+++ b/src/app/components/custom-form-control-test/custom-form-control-test.component.html
@@ -4,8 +4,8 @@
         <input class="form-control" formControlName="name" [maxlength]="20">
     </c-form-control>
 
-    <c-form-control [data]="{minLength:10}">
-        <label cLabel class="mt-2 d-block">Password</label>
+    <c-form-control [data]="{minLength:10}" label="Password">
+        <label cLabel class="mt-2 d-block">Password One</label>
         <input class="form-control" formControlName="password">
     </c-form-control>
 </form>
