--- a/src/lib/custom-form-control/custom-form-control.scss
+++ b/src/lib/custom-form-control/custom-form-control.scss
@@ -2,16 +2,19 @@
   display: flex;
   gap: 1rem;
   justify-content: space-between;
-  margin-top: 0.3rem;
   .c-error-container {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding: 3px;
+    padding: 0 3px;
+
+    margin-top: 0.3rem;
   }
   .c-counter {
     min-width: fit-content;
     width: fit-content;
     text-align: end;
+
+    margin-top: 0.3rem;
   }
 }
