Custom form control updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <!-- <app-two-way-binding-test></app-two-way-binding-test> -->
 <app-custom-form-control-test></app-custom-form-control-test>
 <div [valueA]="obj">
-    <ng-template pTemplate [templateType]="obj" let-item>
+    <ng-template [templateType]="obj" pTemplate let-item>
         {{item.name}}
     </ng-template>
 </div>
