--- a/src/app/components/custom-form-control-test/custom-form-control-test.component.html
+++ b/src/app/components/custom-form-control-test/custom-form-control-test.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="form" class="form-group">
-    <c-form-control>
+    <c-form-error>
         <label cLabel for="">First Name</label>
         <input class="form-control" formControlName="name" [maxlength]="20">
-    </c-form-control>
+    </c-form-error>
 
-    <c-form-control [data]="{minLength:10}" label="Password">
+    <c-form-error [data]="{minLength:10}" label="Password">
         <label cLabel class="mt-2 d-block">Password One</label>
         <input class="form-control" formControlName="password">
-    </c-form-control>
+    </c-form-error>
 </form>
