--- a/src/app/components/custom-form-control-test/custom-form-control-test.component.html
+++ b/src/app/components/custom-form-control-test/custom-form-control-test.component.html
@@ -1,11 +1,13 @@
 <form [formGroup]="form" class="form-group">
-    <c-form-error>
+    <c-form-error required="It is required">
         <label cLabel for="">First Name</label>
         <input class="form-control" formControlName="name" [maxlength]="20">
     </c-form-error>
 
-    <c-form-error [data]="{minLength:10}" label="Password">
+    <c-form-error required="It is required" [data]="{minLength:10}" label="Password">
         <label cLabel class="mt-2 d-block">Password One</label>
         <input class="form-control" formControlName="password">
+        <!-- <ngx-form-error [control]="exampleForm.get('req')"></ngx-form-error> -->
+
     </c-form-error>
 </form>
