ngrx todo added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h5>Two Way binding Test for contentEditable</h5>
+<!-- <h5>Two Way binding Test for contentEditable</h5>
 <div [(twoWay)]="obj.name" contenteditable="true">
 </div>
 {{obj.name}}
@@ -6,4 +6,5 @@
 <br />
 <h5>Input Validators Test</h5>
 
-<input type="text" appNumberValidator>
+<input type="text" appNumberValidator> -->
+<router-outlet></router-outlet>
